[package]
name = "drop"
version = "0.1.0"
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
dotenv = "0.13.0"
harsh = "0.1.5"
rocket = "0.3.15"
rocket_codegen = "0.3.15"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
